Changes needed to compile Jemo with Java 8.
Signed-off-by: Yannis Theocharis <ytheohar@gmail.com>